--- a/index.html
+++ b/index.html
@@ -192,6 +192,16 @@
 
         <section>
           <h1>Typical Day</h1>
+          <p>Tutorials first thing in the morning</p>
+          <p>Quick morning meeting to get everyones status</p>
+          <p>Headphones on smahsing the keys</p>
+          <p>Supporting my team</p>
+
+          <aside class="notes">
+            <p>I spend a lot of my day with my headphones</p>
+            <p>but I have meetings about products</p>
+            <p>most of my time is R&amp;D coding</p>
+          </aside>
         </section>
       </section>
 
