--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
           <h1>Typical Day</h1>
           <p>Tutorials first thing in the morning</p>
           <p>Quick morning meeting to get everyones status</p>
-          <p>Headphones on smahsing the keys</p>
+          <p>Headphones on smahsing the keys all day</p>
           <p>Supporting my team</p>
 
           <aside class="notes">
             <p>I spend a lot of my day with my headphones</p>
-            <p>but I have meetings about products</p>
-            <p>most of my time is R&amp;D coding</p>
+            <p> What am I working on?</p>
+            <p>What are you working on</p>
           </aside>
         </section>
       </section>
@@ -246,9 +246,11 @@
       <section>
         <h1>Meetups</h1>
         <p>Thousands of meetups that meet every month</p>
-        <p>Who has been to a meetup?</p>
+        <p>All sorts of topics</p>
+        <p>I a JavaScript meetup in Truckee</p>
         <aside class="notes">
           <ul>
+            <p>Who has been to a meetup?</p>
             <li>What was it for?</li>
             <li>Why did you go?</li>
           </ul>
@@ -261,14 +263,23 @@
         <p>Hundreds of Tech conferences around the world</p>
         <p>Goal to grow knowledge, deepen relationships and build community</p>
 
-        <aside class="notes"></aside>
+        <aside class="notes">
+          <ul>
+            <li>Give you new ideas</li>
+            <li>Renew your excitement</li>
+          </ul>
+        </aside>
       </section>
 
       <section>
         <h1>Career possibilities</h1>
         <p>Pick a field and you can code in it</p>
 
-        <aside class="notes"></aside>
+        <aside class="notes">
+          <ul>
+            <li>You can write code for anyone</li>
+          </ul>
+        </aside>
       </section>
 
       <section>
@@ -344,15 +355,14 @@
         <p class="fragment fade-in">Just CODE!</p>
       </section>
 
-      <section>
-        <h1>Links</h1>
-        <ul>
-          <li><a href=""></a></li>
-        </ul>
 
-        <aside class="notes"></aside>
+      <section>
+        <h1>Questions?</h1>
       </section>
 
+      <section>
+        <h1>Thank you</h1>
+      </section>
 
       <section>
         <h1>Links</h1>
